fixed contrast issues on header

--- a/my-app/src/components/header/Header.css
+++ b/my-app/src/components/header/Header.css
@@ -15,7 +15,7 @@
 }
 
 .headerInformation__subtitle {
-    color: var(--font-color-gray-h2);
+    color: var(--font-color-gray-header);
     width: 400px;
     font-size: var(--font-size-medium);
 }
