--- a/my-app/src/pages/styles/HomePage.css
+++ b/my-app/src/pages/styles/HomePage.css
@@ -65,7 +65,6 @@ position: sticky;
   justify-content: center;
   margin: 0 10%;
   padding: 5% 0;
-  background-color: red;
 }
 
 /* Specific article styles */
